[package]
name = "alic"
version = "2.0.0"
description = "Alic Image Compressor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri = { version = "2", features = ["devtools"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
muda = "0.15.3"
tauri-plugin-dialog = "2"
libcaesium = "0.17.0"
image = "0.25.5"
infer = "0.16.0"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tokio = "1.42.0"
tauri-plugin-clipboard-manager = "2.2.0"
libc = "0.2.168"
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = [
    "NSFileManager",
    "NSAutoreleasePool",
] }
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard = "2.1.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
