[package]
name = "alic"
version = "2.0.0"
description = "Alic Image Compressor"
authors = ["blopker"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri = { version = "2", features = ["devtools"] }
image = { version = "0.25.5", features = ["avif"] }
infer = "0.19.0"
libc = "0.2.168"
libcaesium = "0.20.0"
muda = "<0.18"
objc2 = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
specta-util = "0.0.9"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tokio = "1.42.0"
objc2-foundation = { version = "0.3.0", features = [
    "NSFileManager",
    "NSAutoreleasePool",
] }
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2.5.0"
kamadak-exif = "0.6.1"
tauri-plugin-log = "2"
log = "0.4.27"
objc2-app-kit = { version = "0.3.1", features = ["NSApplication", "NSDockTile", "NSRunningApplication"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
